# sdk-python

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  VOCAB_VERSIONS  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
notebooks/: 01-exploring-reference-pod.ipynb  02-converting-fhir-data.ipynb  03-trend-analysis.ipynb
scripts/hooks/: pre-commit
src/cascade_protocol/: __init__.py
src/cascade_protocol/deserializer/: __init__.py  turtle_parser.py
src/cascade_protocol/models/: __init__.py  advisory.py  ai_extraction.py  allergy.py  claim_record.py  common.py  condition.py  coverage.py  encounter.py  family_history.py  health_profile.py  imaging_study.py  immunization.py  implanted_device.py  lab_result.py  medication.py  medication_administration.py  patient_profile.py  procedure.py  social_history.py  social_history_clinical.py  vital_sign.py  wellness.py
src/cascade_protocol/pandas_integration/: __init__.py  dataframe.py
src/cascade_protocol/pod/: __init__.py  pod.py
src/cascade_protocol/serializer/: __init__.py  turtle_serializer.py
src/cascade_protocol/utils/: __init__.py  deterministic_uri.py
src/cascade_protocol/validator/: __init__.py  validator.py
src/cascade_protocol/vocabularies/: __init__.py  namespaces.py
tests/: __init__.py  test_conformance.py  test_deserializer.py  test_deterministic_uri.py  test_namespaces.py  test_pod.py  test_serializer.py  test_validator.py
